compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_method_snapshots@single_generic.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"class Test { fn test<T>() -> void {} }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Class(
                ClassDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    builtin: false,
                    members: [
                        Method(
                            MethodDefinition {
                                method_id: None,
                                visibility: Private,
                                name: Identifier {
                                    name: "test",
                                    location: <internal>:16:20,
                                },
                                parameters: [],
                                type_parameters: [
                                    TypeParameter {
                                        name: Identifier {
                                            name: "T",
                                            location: <internal>:21:22,
                                        },
                                        type_id: None,
                                        type_param_id: None,
                                        constraints: [],
                                        location: <internal>:21:22,
                                    },
                                ],
                                return_type: Some(
                                    Type {
                                        name: void,
                                        type_params: [],
                                        location: <internal>:29:33,
                                    },
                                ),
                                block: Block {
                                    statements: [],
                                    location: <internal>:34:36,
                                },
                                location: <internal>:13:36,
                            },
                        ),
                    ],
                    type_parameters: [],
                    location: <internal>:0:38,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
