compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_struct_snapshots@constrained_generic.snap
---
source: compiler/lume_hir/src/lower.rs
description: "struct Test<T: Numeric> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Struct(
                StructDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    builtin: false,
                    properties: [],
                    methods: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:12:13,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    name: Numeric,
                                    type_params: [],
                                    location: <internal>:15:22,
                                },
                            ],
                            location: <internal>:12:13,
                        },
                    ],
                    location: <internal>:0:26,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
