compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_struct_snapshots@no_generics.snap
---
source: compiler/lume_hir/src/lower.rs
description: "struct Test {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Struct(
                StructDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    properties: [],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:0:14,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
