compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_struct_snapshots@single_generic.snap
---
source: compiler/lume_hir/src/lower.rs
description: "struct Test<T> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Struct(
                StructDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    properties: [],
                    methods: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:12:13,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:12:13,
                        },
                    ],
                    location: <internal>:0:17,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
